<resources>
    <string name="app_name">SplashActivity</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="help">Trợ giúp</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="register">Đăng ký</string>
    <string name="retry">Thử lại</string>
    <string name="apply">Áp dụng</string>
    <string name="delete">Xóa</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="done">Xong</string>
    <string name="close">Đóng</string>
    <string name="closed">Đóng</string>
    <string name="open">Mở</string>
    <string name="save">Lưu</string>
    <string name="submit">Gửi</string>
    <string name="_continue">Tiếp tục</string>
    <string name="search">Tìm kiếm</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_up_now">Đăng ký ngay</string>
    <string name="about">Về chúng tôi</string>
    <string name="setting">Cài đặt</string>
    <string name="active">Kích hoạt</string>
    <string name="cart">Giỏ hàng</string>
    <string name="total">Thành tiền</string>
    <string name="create">Tạo mới</string>
    <string name="confirm">Xác nhận</string>
    <string name="payment">Thanh toán</string>
    <string name="address">Địa chỉ</string>
    <string name="address_book">Sổ địa chỉ</string>
    <string name="favorite">Đã thích</string>
    <string name="un_favorite">Bỏ thích</string>
    <string name="read_more">Xem thêm</string>

    <string name="hint_user_name">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="hint_old_password">Mật khẩu hiện tại</string>
    <string name="hint_new_pass">Mật khẩu mới</string>
    <string name="hint_renew_pass">Nhập lại mật khẩu mới</string>
    <string name="hint_full_name">Họ tên</string>
    <string name="hint_email">Địa chỉ email</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="hint_search_product">Tìm kiếm sản phẩm</string>
    <string name="hint_search_categories">Danh mục sản phẩm</string>
    <string name="hint_otp">Mã xác thực</string>
    <string name="hint_address_detail">Địa chỉ chi tiết</string>
    <string name="hint_message">Tin nhắn</string>
    <string name="hint_quantity">Số lượng</string>
    <string name="hint_company_name">Tên công ty</string>
    <string name="hint_tax_code">Mã số thuế</string>
    <string name="hint_invoice_address">Địa chỉ công ty</string>

    <string name="title_verify_phone">Xác nhận số điện thoại</string>
    <string name="title_notify">Thông báo</string>
    <string name="title_processing">Đang xử lý &#8230;</string>
    <string name="title_requesting">Đang gửi yêu cầu &#8230;</string>
    <string name="title_change_password">Đổi mật khẩu</string>
    <string name="title_profile">Thông tin cá nhân</string>
    <string name="title_forgot_password">Quên mật khẩu</string>
    <string name="title_feed_back">Gửi phản hồi</string>
    <string name="cart_title">Giỏ hàng (%d)</string>

    <string name="contact_us_note">Bạn có thắc mắc cho chúng tôi. Gửi tin nhắn cho chúng tôi và chúng tôi sẽ trả lời sớm nhất có thể</string>
    <string name="msg_double_back_exit">Nhấn Back lần nữa để thoát.</string>
    <string name="msg_waiting">Đang xử lý &#8230;</string>
    <string name="msg_empty">Danh sách trống</string>
    <string name="msg_forgot_password">Nhập số điện thoại để lấy lại mật khẩu.</string>
    <string name="msg_forgot_change_password">Nhập mã xác thực nhận được từ SMS</string>
    <string name="msg_required_login">Bạn cần login để sử dụng tính năng này.</string>
    <string name="msg_error_ssl_cert_invalid">Chứng chỉ SSL máy chủ không hợp lệ. Bạn có muốn tiếp tục?</string>
    <string name="msg_confirm_logout">Bạn có chắc chắn đăng xuất không?</string>
    <string name="msg_need_accept_term">Bạn cần đồng ý với điều khoản sử dụng.</string>
    <string name="msg_need_choose_city">Bạn cần chọn Tỉnh/Thành phố.</string>
    <string name="request_success">Gửi yêu cầu thành công.</string>
    <string name="msg_need_choose_address">Bạn cần chọn địa chỉ.</string>
    <string name="msg_need_choose_payment_method">Bạn cần chọn phương thức thanh toán.</string>
    <string name="msg_need_choose_delivery_method">Bạn cần chọn phương thức vận chuyển.</string>
    <string name="msg_cart_item_quantity_invalid">Bạn đã nhập số lượng vượt quá 600Kg.</string>
    <string name="msg_delivery_required_weight">Phương thức vận chuyển này không áp dụng cho đơn hàng dưới %1$d %2$s, vui lòng chọn phương thức giao hàng khác</string>
    <string name="msg_delivery_not_available">Phương thức vận chuyển không hỗ trợ khu vực của bạn. Vui lòng chọn phương thức khác.</string>

    <string name="verify_phone_header">Mã xác thực được gửi về số thuê bao</string>
    <string name="verify_phone_header_2">Điền mã xác nhận</string>
    <string name="verify_phone_count_down">Mã xác thực sẽ được gửi đến số điện thoại của bạn trong <![CDATA[<font color=#C50000>%d</font>]]> giây</string>
    <string name="verify_phone_resend_otp"><![CDATA[<u>Gửi lại mã kích hoạt</u>]]></string>
    <string name="e_0_input_empty">Bạn chưa nhập thông tin này.</string>
    <string name="e_1_pass_not_match">Mật khẩu không khớp.</string>
    <string name="e_2_invalid_email">Email không hợp lệ.</string>
    <string name="e_3_password_invalid">Đây là trường bắt buộc và ít nhất 8 ký tự và có một ký tự viết hoa và chữ và số.</string>
    <string name="e_4_choose_delivery_time">Thời gian giao hàng không được chọn.</string>
    <string name="e_5_need_otp">Bạn cần nhập mã OTP.</string>
    <string name="e_6_need_city_district">Bạn cần nhập thông tin Tỉnh/Thành phố và Quận/Huyện.</string>
    <string name="e_7_quantity_not_valid">Số lượng phải lớn hơn 0 và nhỏ hơn hoặc bằng 600.</string>
    <string name="e_401_auth_fail">Tên đăng nhập hoặc mật khẩu không đúng.</string>
    <string name="e_601_not_define">Có lỗi, vui lòng thử lại sau!</string>
    <string name="e_602_no_internet">Không thể kết nối Internet. Vui lòng kiểm tra lại kết nối!</string>
    <string name="e_not_found_item">Không tìm thấy dữ liệu.</string>
    <string name="e_email_exists">Email đã tồn tại.</string>
    <string name="e_email_invalid">Email không hợp lệ.</string>
    <string name="e_invalid_phone">Số điện thoại không hợp lệ.</string>
    <string name="e_phone_exist">Số điện thoại đã tồn tại.</string>
    <string name="e_invalid_otp">Mã xác nhận không đúng.</string>
    <string name="e_user_exist">Tài khoản đã tồn tại.</string>
    <string name="e_account_inactive">Tài khoản chưa được kích hoạt</string>
    <string name="e_old_password_not_match">Mật khẩu hiện tại không đúng</string>
    <string name="e_account_pass_wrong">Tên đăng nhập hoặc mật khẩu không đúng.</string>
    <string name="e_need_verify_phone">Bạn cần xác nhận số điện thoại.</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_category">Danh mục</string>
    <string name="menu_my_orders">Đơn hàng của tôi</string>
    <string name="menu_my_favorite">Yêu thích</string>
    <string name="contact_us">Liên hệ chúng tôi</string>
    <string name="version_text_format">Phiên bản %s</string>
    <string name="release_text_format">Ngày phát hành %s</string>
    <string name="copyright">by Ngo Dang Hieu</string>
    <string name="phone_code">Chọn quốc gia</string>
    <string name="order_do">Mã đơn:</string>
    <string name="order_time">Ngày đặt:</string>
    <string name="order_status">Trạng thái:</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
</resources>
