<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,HardcodedText">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/toolbar_height"
        android:paddingLeft="@dimen/toolbar_height">

        <TextView
            android:id="@+id/ab_title"
            style="@style/abTitle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_L"
            android:layout_marginLeft="@dimen/padding_L"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

<!--        <include-->
<!--            android:id="@+id/ab_cart_view"-->
<!--            layout="@layout/view_cart"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="@dimen/padding_M"-->
<!--            android:layout_marginRight="@dimen/padding_M" />-->

    </LinearLayout>
    <include
        android:id="@+id/_header"
        layout="@layout/view_header_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_logo_height" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_20"
        android:paddingTop="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_XL"
            android:layout_marginRight="@dimen/padding_XL"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/padding_L"
            app:contentPadding="@dimen/padding_XL">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/forgot_password_phone_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <include
                        layout="@layout/view_input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_XL"
                        android:layout_marginTop="@dimen/padding_M"
                        android:layout_marginRight="@dimen/padding_XL" />

                    <com.toankh.roundview.RoundTextView
                        android:id="@+id/forgot_password_submit"
                        style="@style/buttonPrimary"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/padding_XXL"
                        android:layout_marginTop="@dimen/padding_30"
                        android:layout_marginRight="@dimen/padding_XXL"
                        android:text="@string/submit" />

                    <TextView
                        style="@style/inputLabel"
                        android:layout_marginLeft="@dimen/padding_XL"
                        android:layout_marginTop="@dimen/padding_XXL"
                        android:text="@string/msg_forgot_password" />
                </LinearLayout>

                <!--view change pass after forgot-->
                <LinearLayout
                    android:id="@+id/forgot_password_change_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputLayout"
                        android:layout_marginTop="@dimen/padding_M"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/forgot_password_new_pass"
                            style="@style/inputEdt"
                            android:hint="@string/hint_new_pass"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputLayout"
                        android:layout_marginTop="@dimen/padding_M"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/forgot_password_renew_pass"
                            style="@style/inputEdt"
                            android:hint="@string/hint_renew_pass"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputLayout"
                        android:layout_marginTop="@dimen/padding_M">

                        <EditText
                            android:id="@+id/forgot_password_verification_number"
                            style="@style/inputEdt"
                            android:hint="@string/hint_otp"
                            android:imeOptions="actionDone"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.toankh.roundview.RoundTextView
                        android:id="@+id/forgot_password_change_submit"
                        style="@style/buttonPrimary"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/padding_XXL"
                        android:layout_marginTop="@dimen/padding_40"
                        android:layout_marginRight="@dimen/padding_XXL"
                        android:layout_marginBottom="@dimen/padding_L"
                        android:text="@string/title_change_password" />

                    <TextView
                        style="@style/inputLabel"
                        android:layout_marginLeft="@dimen/padding_XL"
                        android:layout_marginTop="@dimen/padding_XXL"
                        android:text="@string/msg_forgot_change_password" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>