<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/toolbar_height"
            android:paddingLeft="@dimen/toolbar_height">

            <TextView
                android:id="@+id/ab_title"
                style="@style/abTitle"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/padding_L"
                android:layout_marginLeft="@dimen/padding_L"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/app_name" />

<!--            <include-->
<!--                android:id="@+id/ab_cart_view"-->
<!--                layout="@layout/view_cart"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="@dimen/padding_M"-->
<!--                android:layout_marginRight="@dimen/padding_M" />-->

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginTop="@dimen/padding_XXL">

            <EditText
                android:id="@+id/profile_full_name"
                style="@style/inputEdt"
                android:hint="@string/hint_full_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginTop="@dimen/padding_M">

            <EditText
                android:id="@+id/profile_username"
                style="@style/inputEdt"
                android:enabled="false"
                android:hint="@string/hint_user_name"
                android:textColor="@color/grey600" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputLayout"
            android:layout_marginTop="@dimen/padding_M">

            <EditText
                android:id="@+id/profile_email"
                style="@style/inputEdt"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- <com.google.android.material.textfield.TextInputLayout
             style="@style/inputLayout"
             android:layout_marginTop="@dimen/padding_M"
             android:layout_marginBottom="@dimen/padding_20">

             <EditText
                 android:id="@+id/profile_phone_number"
                 style="@style/inputEdt"
                 android:hint="@string/hint_phone"
                 android:imeOptions="actionDone"
                 android:inputType="phone" />
         </com.google.android.material.textfield.TextInputLayout>-->
        <include
            layout="@layout/view_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_XL"
            android:layout_marginTop="@dimen/padding_M"
            android:layout_marginRight="@dimen/padding_XL"
            android:layout_marginBottom="@dimen/padding_XXL" />


        <View style="@style/divider" />

        <LinearLayout
            android:id="@+id/profile_change_password"
            style="@style/menuItem"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:contentDescription="@string/title_change_password"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_lock"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                style="@style/menuTitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/title_change_password" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_change_password"
                android:src="@drawable/ic_froward" />
        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:id="@+id/profile_logout"
            style="@style/menuItem"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:contentDescription="@string/logout"
                android:tint="@color/text_red"
                app:srcCompat="@drawable/ic_exit"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                style="@style/menuTitle"
                android:text="@string/logout" />
        </LinearLayout>

        <View style="@style/divider" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>