<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/toolbar_height"
        android:paddingLeft="@dimen/toolbar_height">

        <TextView
            android:id="@+id/ab_title"
            style="@style/abTitle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_L"
            android:layout_marginLeft="@dimen/padding_L"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

<!--        <include-->
<!--            android:id="@+id/ab_cart_view"-->
<!--            layout="@layout/view_cart"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="@dimen/padding_M"-->
<!--            android:layout_marginRight="@dimen/padding_M" />-->

    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_us_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_XXL"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/padding_20"
                android:paddingRight="@dimen/padding_20"
                android:text="@string/contact_us_note"
                android:textColor="@color/grey900"
                android:textSize="@dimen/text_lv3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_us_name_view"
                style="@style/inputLayout"
                android:layout_marginLeft="@dimen/padding_XXL"
                android:layout_marginTop="@dimen/padding_L"
                android:layout_marginRight="@dimen/padding_XXL"
                android:hint="@string/hint_full_name">

                <EditText
                    android:id="@+id/contact_us_name"
                    style="@style/inputEdt"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <include
                layout="@layout/view_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_XXL"
                android:layout_marginTop="@dimen/padding_M"
                android:layout_marginRight="@dimen/padding_XXL" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_us_email_view"
                style="@style/inputLayout"
                android:layout_marginLeft="@dimen/padding_XXL"
                android:layout_marginTop="@dimen/padding_M"
                android:layout_marginRight="@dimen/padding_XXL"
                android:hint="@string/hint_email">

                <EditText
                    android:id="@+id/contact_us_email"
                    style="@style/inputEdt"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- <TextView
                 style="@style/inputLabel"
                 android:layout_marginLeft="@dimen/padding_XXL"
                 android:layout_marginTop="@dimen/padding_L"
                 android:layout_marginRight="@dimen/padding_XXL"
                 android:layout_marginBottom="@dimen/padding_L"
                 android:paddingLeft="@dimen/padding_S"
                 android:paddingRight="@dimen/padding_S"
                 android:text="@string/message" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_us_message_view"
                style="@style/inputLayout"
                android:layout_marginLeft="@dimen/padding_XXL"
                android:layout_marginTop="@dimen/padding_M"
                android:hint="@string/hint_message"
                android:layout_marginRight="@dimen/padding_XXL">

                <EditText
                    android:id="@+id/contact_us_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_M"
                    android:gravity="start"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxHeight="120dp"
                    android:padding="@dimen/padding_L"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_lv3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.toankh.roundview.RoundTextView
                android:id="@+id/contact_us_submit"
                style="@style/buttonPrimary"
                android:layout_marginLeft="@dimen/padding_30"
                android:layout_marginTop="@dimen/padding_30"
                android:layout_marginRight="@dimen/padding_30"
                android:layout_marginBottom="@dimen/padding_XL"
                android:text="@string/submit" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>