<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,HardcodedText">

    <include
        android:id="@+id/_header"
        layout="@layout/view_header_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_logo_height" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_20"
        android:paddingTop="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_XL"
            android:layout_marginRight="@dimen/padding_XL"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/padding_L"
            app:contentPadding="@dimen/padding_XL">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputLayout"
                    android:layout_marginTop="@dimen/padding_S"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/change_password_old"
                        style="@style/inputEdt"
                        android:hint="@string/hint_old_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputLayout"
                    android:layout_marginTop="@dimen/padding_M"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/change_password_new"
                        style="@style/inputEdt"
                        android:hint="@string/hint_new_pass"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputLayout"
                    android:layout_marginTop="@dimen/padding_M"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/change_password_renew"
                        style="@style/inputEdt"
                        android:hint="@string/hint_renew_pass"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.toankh.roundview.RoundTextView
                    android:id="@+id/change_password_submit"
                    style="@style/buttonPrimary"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/padding_XXL"
                    android:layout_marginTop="@dimen/padding_40"
                    android:layout_marginRight="@dimen/padding_XXL"
                    android:layout_marginBottom="@dimen/padding_L"
                    android:text="@string/title_change_password" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>